# kongalib

./: .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  MANIFEST.in  README.rst  _version.py  azure-pipelines.yml  kongaui.py  kongautil.py  pyproject.toml  setup.py
.azure-pipelines/: azure-manylinux-wheels.yml  azure-publish-dist.yml  azure-setup.yml  azure-steps.yml  build-deps.bat  build-wheels.sh  ci.yml  install_konga_sdk.py  macos-install-python.sh
.github/scripts/: publish_to_kss.py
.github/workflows/: build_wheels.yml
azure-pipelines/: azure-manylinux-wheels.yml  azure-publish-dist.yml  azure-setup.yml  azure-steps.yml
azure-wheel-helpers/: azure-manylinux-wheels.yml  azure-setup.yml  azure-steps.yml  build-deps.bat  build-wheels.sh  macos-install-python.sh
data/: README.md
doc/: Makefile  async.rst  base.rst  conf.py  datadict.rst  dbapi.rst  error.rst  extra.rst  index.rst  intro.rst  make.bat
doc/_static/: _kongalib.py
src/: __init__.py  async_client.py  client.py  compat.py  constants.py  expression.py  json.py  kongaui.py  kongautil.py  scripting.py
src/_kongalib/: client.cpp  decimal.cpp  interpreter.cpp  json.cpp  module.cpp  module.h  utility.cpp
src/_kongalib/amalgamation/: kongalib.cpp
src/kongalib/: __init__.py  async_client.py  client.py  constants.py  data_dictionary.py  db.py  expression.py  json.py  scripting.py
