[build-system]
requires = [ "setuptools >= 75.0.0" ]
build-backend = "_version:build_meta"
backend-path = [ '.' ]


[project]
name = "kongalib"
authors = [
    { name = "EasyByte Software", email = "konga@easybyte.it" }
]
description = "Konga client library"
readme = "README.rst"
requires-python = ">= 3.8"
keywords = [ "konga", "client", "erp" ]
license = "LGPL-3.0-or-later"
classifiers = [
	"Natural Language :: Italian",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: C++",
	"Development Status :: 5 - Production/Stable",
	"Environment :: Console",
	"Intended Audience :: Developers",
	"Intended Audience :: Information Technology",
	"Intended Audience :: Financial and Insurance Industry",
	"Operating System :: MacOS :: MacOS X",
	"Operating System :: Microsoft :: Windows",
	"Operating System :: POSIX :: Linux",
	"Topic :: Office/Business",
	"Topic :: Office/Business :: Financial",
	"Topic :: Software Development :: Libraries"
]
dependencies = [
	"colorama",
	"nest_asyncio"
]
dynamic = [ "version" ]


[project.urls]
homepage = "https://github.com/easybyte-software/kongalib"
documentation = "https://public.easybyte.it/docs/current/technical/kongalib/index.html"
repository = "https://github.com/easybyte-software/kongalib.git"


[tool.setuptools.packages.find]
where = [ "src" ]
exclude = [ "constants.py" ]
namespaces = false


[tool.setuptools]
py-modules = [ "kongautil", "kongaui" ]
zip-safe = true


[tool.setuptools.dynamic]
version = { attr = "_version.__version__" }
