[build-system]
requires = [ "setuptools >= 78.0.0", "setuptools-scm >= 8" ]
build-backend = "setuptools.build_meta"


[project]
name = "kongalib"
authors = [
    { name = "EasyByte Software", email = "konga@easybyte.it" }
]
description = "Konga client library"
readme = "README.rst"
requires-python = ">= 3.10"
keywords = [ "konga", "client", "erp" ]
license = "LGPL-3.0-or-later"
classifiers = [
	"Natural Language :: Italian",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
	"Programming Language :: C++",
	"Development Status :: 5 - Production/Stable",
	"Environment :: Console",
	"Intended Audience :: Developers",
	"Intended Audience :: Information Technology",
	"Intended Audience :: Financial and Insurance Industry",
	"Operating System :: MacOS :: MacOS X",
	"Operating System :: Microsoft :: Windows",
	"Operating System :: POSIX :: Linux",
	"Topic :: Office/Business",
	"Topic :: Office/Business :: Financial",
	"Topic :: Software Development :: Libraries"
]
dependencies = [
	"colorama",
	"nest_asyncio"
]
dynamic = [ "version" ]


[project.urls]
homepage = "https://github.com/easybyte-software/kongalib"
documentation = "https://public.easybyte.it/docs/current/technical/kongalib/index.html"
repository = "https://github.com/easybyte-software/kongalib.git"


[tool.setuptools.packages.find]
where = [ "src" ]
exclude = [ "constants.py" ]
namespaces = false


[tool.setuptools]
py-modules = [ "kongautil", "kongaui" ]
zip-safe = true


#
#	Version is derived from git tags (e.g. tag "2.1.0" -> version "2.1.0").
#	Between tags, setuptools-scm produces a PEP 440 dev version like
#	"2.1.1.dev3+g<sha>". To override (e.g. when building from the parent
#	konga monorepo), set SETUPTOOLS_SCM_PRETEND_VERSION_FOR_KONGALIB to a
#	PEP 440 string before invoking the build.
#
[tool.setuptools_scm]
fallback_version = "0.0.0+unknown"
